--- a/Nouveau document texte.html
+++ b/Nouveau document texte.html
@@ -6,48 +6,90 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        table {
-            border: 1px solid black;
-        }
+</head>
 
-        th,
-        td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-    </style>
+<body>
+    <dialog open>
+        <form action="" method="dialog">
+            <div>
+                <label for="a">i</label>
+                <input min="5" max="15" id="a">
+            </div>
+            <div>
+                <input type="number">
+            </div>
+            <div>
+                <input type="color">
+            </div>
+            <div>
+                <input type="button">
+            </div>
+            <div>
+                <input type="reset">
+            </div>
+            <div>
+                <input type="radio">
+            </div>
+            <div>
+                <input type="checkbox">
+                <div>
+                    <progress value="50" max="50">
+                    </progress>
+                </div>
+                <div>
+                    <meter value="20" low="60" high="90"></meter>
+                </div>
+                <div>
+                    <details>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
 
-    <table>
-        <thead>
-            <tr>
-                <th>j</th>
-                <th>jj</th>
-                <th>jjj</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Row</td>
-                <td>Row</td>                <td>Row</td>
+                        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, adipisci voluptate aliquid
+                            tempore eaque, porro et commodi dolorum consequuntur repellat officiis! Aliquam minus amet
+                            ipsam exercitationem? Deserunt, id ipsam. Facere! </p>
+                    </details>
+                </div>
 
-            </tr>
-            <tr>
-                <td>Row</td>
-                <td>Row</td>                <td>Row</td>
+                <div>
+                    <input type="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
+                        aria-label="Email address" aria-labelledby="email-label">
+                    <label id="email-label">Email address:</label>
+                </div>
+                <div>
+                    <input type="tel" pattern="(\+?\d{1,2}\s?)?(\(\d{3}\)|\d{3})[\s.-]?\d{3}[\s.-]?\d{4}"
+                        aria-label="Phone number" aria-labelledby="phone-label">
+                    <label id="phone-label">Phone number:</label>
+                </div>
+                <button type="submit">Submit</button>
 
-            </tr>
-            <tr>
-            </tr>
-        </tbody>
-
-    </table>
-
-
-    </table>
-
-
-    </body>
+</body>
 
 </html>
